--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-﻿Flask==2.2.3
-Werkzeug==2.2.2
-gunicorn==20.1.0
-pandas==2.0.0
-dash==2.0.0
-plotly==5.3.1
-joblib==1.0.1
-shap==0.39.0
-numpy==1.21.2
+dash==2.14.2
+Flask==2.2.3
+joblib==1.1.0
+numpy==1.23.5
+numpy==1.24.4
+pandas==2.0.3
+plotly==5.18.0
+shap==0.41.0
